Fixed "Development" section from overflowing off page for mobile.

--- a/web/css/stylesheet.css
+++ b/web/css/stylesheet.css
@@ -79,9 +79,10 @@ h2 {
     color: #FFF;
     background-color: #3b9bd3;
     border-radius: 1px;
-    line-height: 3;
-    padding: 6px 10px;
+    line-height: 2;
+    padding: 0px 10px;
     margin: 5px;
+    display: inline-block;
 }
 
 /* PORTFOLIO - SHOW/HIDE */
